# agents-starter

./: .gitignore  Makefile  README.md  pyproject.toml
agents_starter/agentsdk/: agent.py  cli.py  pyproject.toml
agents_starter/agentsdk/examples/: __init__.py  quickstart.py
agents_starter/agentsdk/llm/: client.py
agents_starter/autogen/: .gitignore  pyproject.toml
agents_starter/autogen/autogen_starter/: cli.py  logger.py  settings.py
agents_starter/autogen/autogen_starter/config/: default-model.example.json  default-model.json
agents_starter/autogen/autogen_starter/examples/: __init__.py  grapyflow.py  hitl.py  mcp.py  quickstart.py  team.py  tools.py
agents_starter/autogen/autogen_starter/examples/financial_analysis/: __init__.py
agents_starter/autogen/autogen_starter/examples/rag/: __init__.py  indexer.py
agents_starter/autogen/autogen_starter/llm/: client.py
agents_starter/autogen/autogen_starter/rag/: __init__.py
agents_starter/crewai/: pyproject.toml
agents_starter/crewai/crewai_starter/: cli.py  utils.py
agents_starter/crewai/crewai_starter/examples/: __init__.py  flow.py  quickstart.py
agents_starter/crewai/crewai_starter/examples/creator_flow/: __init__.py  creator_flow.py
agents_starter/crewai/crewai_starter/examples/creator_flow/crews/content_crew/: content_crew.py
agents_starter/crewai/crewai_starter/examples/creator_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
agents_starter/crewai/crewai_starter/examples/research_crew/: __init__.py  crew.py
agents_starter/crewai/crewai_starter/examples/research_crew/config/: agents.yaml  tasks.yaml
agents_starter/crewai/crewai_starter/examples/state_flow/: __init__.py  research_flow.py
agents_starter/crewai/crewai_starter/llm/: client.py
agents_starter/googleadk/: adk-web.md  pyproject.toml
agents_starter/googleadk/agent-web/multi_tool_agent/: agent.py
agents_starter/googleadk/googleadk_starter/: settings.py  utils.py
agents_starter/googleadk/googleadk_starter/examples/: __init__.py  quickstart.py
agents_starter/googleadk/googleadk_starter/examples/agent_team/: __init__.py
agents_starter/googleadk/googleadk_starter/llm/: client.py
agents_starter/langgraph/: .gitignore  pyproject.toml
agents_starter/langgraph/langgraph_starter/: cli.py  utils.py
agents_starter/langgraph/langgraph_starter/examples/: __init__.py  quickstart.py
agents_starter/langgraph/langgraph_starter/examples/server/: __init__.py  api_test.py  langgraph.json
agents_starter/langgraph/langgraph_starter/examples/sqlagent/: __init__.py  agent.py  download-db.py
agents_starter/langgraph/langgraph_starter/llm/: client.py
agents_starter/settings/: .gitignore  pyproject.toml
agents_starter/settings/agents_starter_settings/: settings.example.toml  settings.py
settings/: settings.example.toml
