[project]
name = "agentsdk-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["openai-agents>=0.0.14"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.uv]
concurrent-downloads = 8

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
