[project]
name = "autogen-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.11.18",
  "autogen-agentchat>=0.4.9.3",
  "autogen-ext[mcp,openai]>=0.4.9.3",
  "autogenstudio>=0.4.2.1",
  "chromadb",
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
[tool.setuptools]
include-package-data = true

[tool.uv]
concurrent-downloads = 8

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autogen_starter*"]
exclude = ["*.tests*"]
namespaces = false

[project.scripts]
"agst" = "autogen_starter.cli:run"
