[project]
name = "autogen-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # common settings for all agents
  "agents-starter-settings",
  # new version of ag2
  "ag2[openai]>=0.7.2",
  "aiohttp>=3.11.18",
  # autogen packages
  "autogen-agentchat>=0.5.7",
  "autogen-core>=0.5.7",
  "autogen-ext[mcp,openai]>=0.5.7",
  # ---- end
  "chromadb>=1.0.8",
  "gensim>=4.3.3",
  "matplotlib>=3.10.3",
  "requests>=2.32.3",
  "yfinance>=0.2.61",
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
[tool.setuptools]
include-package-data = true

[tool.uv]
concurrent-downloads = 16

[tool.uv.sources]
agents-starter-settings = { path = "../settings" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autogen_starter*"]
exclude = ["*.tests*"]
namespaces = false

[project.scripts]
"agst" = "autogen_starter.cli:run"
