[project]
name = "langgraph-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agents-starter-settings",
    "click>=8.1.6",
    "ipython>=9.2.0",
    "langchain-tavily>=0.1.6",
    "langchain[openai]>=0.3.25",
    "langgraph-cli[inmem]>=0.2.10",
    "langgraph>=0.4.3",
    "langsmith>=0.3.42",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "langgraph-sdk>=0.1.69",
    "langchain-community>=0.3.24",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.uv]
concurrent-downloads = 8

[tool.uv.sources]
agents-starter-settings = { path = "../settings" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["langgraph_starter*"]
exclude = ["*.tests*"]
namespaces = false

[project.scripts]
"agst" = "langgraph_starter.cli:run"
