[project]
name = "agents-starter-settings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.11.4", "pydantic-settings>=2.9.1"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.uv]
concurrent-downloads = 8

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents_starter_settings*"]
exclude = ["*.tests*"]
namespaces = false
